--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #282c34;
+	color: whitesmoke;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.side-menu {
+	width: 260px;
+	height: 100vh;
+	padding: 10px;
+	background-color: #202123;
+}
+
+.chat-box {
+	flex: 1;
+	height: 100%;
+	padding: 24px;
+	background-color: #343541;
+}
+
+.chat-message {
+	text-align: left;
+	background-color: #444654;
+}
+
+.chat-message-center {
+	display: flex;
+	max-width: 640px;
+	padding: 12px;
+	padding-left: 24px;
+	padding-right: 24px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.avatar {
+	/* background: white;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px; */
+}
+
+.avatar .chatgpt {
+	padding-right: 24px;
+	height: 24px;
+	width: 24px;
+}
+
+.message {
+	padding-left: 10px;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
+
